@@ -36,6 +36,7 @@ Version 1.7.2+svn:
      leader is on a keep. (bug #13856 and #13855)
    * wmllint updated to accomodate new drake names. Gladiator changes must
      still be done by hand.
+   * No longer "crash" upon invalid pango markup
 
 Version 1.7.2:
  * Campaigns:
